force-app/main/default/objects/PricebookEntry/fields/Charged_per__c.field-meta.xml
<CustomField>
    <fullName>Charged_per__c</fullName>
    <label>Charged per</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One time fee</fullName>
                <default>true</default>
                <label>One time fee</label>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>