force-app/main/default/objects/PricebookEntry/fields/Valid_through__c.field-meta.xml
<CustomField>
    <fullName>Valid_through__c</fullName>
    <label>Valid through</label>
    <required>true</required>
    <type>Date</type>
</CustomField>